gaudi/gaudi_install_operator.yaml
# Copyright (c) 2024 Intel Corporation
# SPDX-License-Identifier: Apache-2.0
# Adapted from https://docs.habana.ai/en/latest/Orchestration/HabanaAI_Operator/Deploying_HabanaAI_Operator.html#using-cli
#
---
apiVersion: v1
kind: Namespace
metadata:
   name: habana-ai-operator
